force-app/main/default/objects/NRV10Team__c/NRV10Team__c.object-meta.xml
<CustomObject>
    <label>Équipe</label>
    <nameField>
        <label>Nom d&apos;équipe</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Équipes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>