force-app/main/default/objects/NRV10Team__c/fields/role__c.field-meta.xml
<CustomField>
    <fullName>role__c</fullName>
    <label>Type de responsable d&apos;équipe</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RV</fullName>
            </value>
            <value>
                <fullName>RVJ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>