force-app/main/default/objects/NRV10Team__c/fields/teamManager__c.field-meta.xml
<CustomField>
    <fullName>teamManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsable d&apos;équipe</label>
    <referenceTo>Collaborator__c</referenceTo>
    <relationshipName>Equipes</relationshipName>
    <type>Lookup</type>
</CustomField>