force-app/main/default/objects/NRV10Team__c/fields/teamRate__c.field-meta.xml
<CustomField>
    <fullName>teamRate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Taux d&apos;équipe</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Le taux de rémunération n&apos;est pas de type &apos;Commission d&apos;équipe&apos;</errorMessage>
        <filterItems>
            <field>NRV10RemunerationRate__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>teamCommission</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>NRV10RemunerationRate__c</referenceTo>
    <relationshipName>Equipes</relationshipName>
    <type>Lookup</type>
</CustomField>