force-app/main/default/objects/NRV10Team__c/validationRules/VR_K3_NRV10Team_DateDeDebut.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_NRV10Team_DateDeDebut</fullName>
    <active>true</active>
    <description>Vérifie que la date de début est renseignée.</description>
    <errorConditionFormula>AND(!$User.ByPassValidationRule__c, ISBLANK(startDate__c))</errorConditionFormula>
    <errorDisplayField>startDate__c</errorDisplayField>
    <errorMessage>La date de début doit être renseignée.</errorMessage>
</ValidationRule>