force-app/main/default/objects/NRV10Team__c/validationRules/VR_K3_NRV10Team_DateDeFin.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_NRV10Team_DateDeFin</fullName>
    <active>true</active>
    <description>Vérifie que la date de fin est postérieure à la date de début</description>
    <errorConditionFormula>AND(!$User.ByPassValidationRule__c, !ISBLANK(endDate__c), startDate__c &gt; endDate__c)</errorConditionFormula>
    <errorDisplayField>endDate__c</errorDisplayField>
    <errorMessage>La date de fin doit être supérieure ou égale à la date de début.</errorMessage>
</ValidationRule>